--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,3 +6,13 @@ html {
   font-size: 1vw;
   background-color: #FCFBF4;
 }
+
+/* .mask {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  background-color: rgba(0, 0, 0, .5);
+  top: 0;
+  z-index: 2;
+  display: none;
+} */
