--- a/src/components/SvgIcon/index.css
+++ b/src/components/SvgIcon/index.css
@@ -5,7 +5,7 @@
   vertical-align: middle;
 }
 
-/* 右侧toolbar */
+/* toolbar */
 .toolbar {
   cursor: pointer;
   zoom: 1.4;
@@ -39,4 +39,9 @@
 .main.close {
   cursor: pointer;
   zoom: 1.3
+}
+
+/*form*/
+.form.cross {
+  zoom: 1.4;
 }
