基本完成变化检测，使用假数据

--- a/src/components/SvgIcon/index.css
+++ b/src/components/SvgIcon/index.css
@@ -45,3 +45,12 @@
 .form.cross {
   zoom: 1.4;
 }
+
+/*perspective*/
+.perspective.detail_close {
+  position: absolute;
+  right: 1px;
+  top: 1px;
+  zoom: 3;
+  cursor: pointer;
+}
