准备实现拖拽

--- a/src/components/SvgIcon/index.css
+++ b/src/components/SvgIcon/index.css
@@ -58,3 +58,11 @@
   zoom: 3;
   cursor: pointer;
 }
+
+.perspective.slide {
+  position: absolute;
+  top: 50%;
+  transform: translateX(-45%) translateY(-50%);
+  zoom: 3;
+  cursor: pointer;
+}
