--- a/src/components/SvgIcon/index.css
+++ b/src/components/SvgIcon/index.css
@@ -60,9 +60,9 @@
 }
 
 .perspective.slide {
-  position: absolute;
-  top: 50%;
-  transform: translateX(-45%) translateY(-50%);
+  /* position: absolute; */
+  /* top: 50%; */
+  /* transform: translateX(-45%) translateY(-50%); */
   zoom: 3;
-  cursor: pointer;
+  /* cursor: pointer; */
 }
